--- a/config.json
+++ b/config.json
@@ -1,11 +1,10 @@
 {
     "server": "0.0.0.0",
     "server_ipv6": "::",
-    "server_port": 8388,
-    "local_address": "127.0.0.1",
-    "local_port": 1080,
-
-    "password": "m",
+    "server_port": 59737,
+    "local_address": "0.0.0.0",
+    "local_port": 9999,
+    "password": "TDH126433",
     "method": "aes-128-ctr",
     "protocol": "auth_aes128_md5",
     "protocol_param": "",
@@ -13,7 +12,6 @@
     "obfs_param": "",
     "speed_limit_per_con": 0,
     "speed_limit_per_user": 0,
-
     "additional_ports" : {}, // only works under multi-user mode
     "additional_ports_only" : false, // only works under multi-user mode
     "timeout": 120,
