--- a/config.json
+++ b/config.json
@@ -9,7 +9,7 @@
     "protocol": "auth_aes128_md5",
     "protocol_param": "",
     "obfs": "tls1.2_ticket_auth_compatible",
-    "obfs_param": "",
+    "obfs_param": "!_)aab",
     "speed_limit_per_con": 0,
     "speed_limit_per_user": 0,
     "additional_ports" : {}, // only works under multi-user mode
